Slightly updated POM, readme, integration tests.